--- a/package.json
+++ b/package.json
@@ -16,8 +16,10 @@
     "next": "15.1.6",
     "next-auth": "^5.0.0-beta.25",
     "react": "^19.0.0",
+    "react-calendar": "^5.1.0",
     "react-dom": "^19.0.0",
     "react-icons": "^5.4.0",
+    "recharts": "^2.15.1",
     "zod": "^3.24.1"
   },
   "devDependencies": {
